Fix overflow CSS.

--- a/app/css/views/MapSidebarView.scss
+++ b/app/css/views/MapSidebarView.scss
@@ -16,7 +16,7 @@
 
   .scrollable {
     max-height: 350px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   header {
